--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "doctrine/annotations": "~1.0",
         "symfony/finder": "2.6.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
     "autoload": {
         "psr-4": {
             "Devonzara\\Breadcrumbs\\": "src/"
